[dawn] Add third_party/libFuzzer DEP, use it
Replace the 'build_with_chromium' conditional in BUILD.gn that emulates the 'fuzzer_test' template, and always just use 'fuzzer_test'.

Should reduce behavior differences between standalone and chromium builds

Change-Id: I666a1c292e010c0cb110952d69a290193daa3c2b

--- a/src/dawn/fuzzers/BUILD.gn
+++ b/src/dawn/fuzzers/BUILD.gn
@@ -15,62 +15,9 @@
 import("../../../scripts/dawn_overrides_with_defaults.gni")
 
 import("//build_overrides/build.gni")
+import("//testing/libfuzzer/fuzzer_test.gni")
 import("${dawn_root}/scripts/dawn_features.gni")
 import("${dawn_root}/src/dawn/fuzzers/dawn_fuzzers.gni")
-
-# We only have libfuzzer in Chromium builds but if we build fuzzer targets only
-# there, we would risk breaking fuzzer targets all the time when making changes
-# to Dawn. To avoid that, we make fuzzer targets compile in standalone builds
-# as well with a dawn_fuzzer_test target that acts like Chromium's fuzzer_test.
-#
-# The standalone fuzzer targets are able to run a single fuzzer input which
-# could help reproduce fuzzer crashes more easily because you don't need a
-# whole Chromium checkout.
-
-if (build_with_chromium) {
-  import("//testing/libfuzzer/fuzzer_test.gni")
-
-  # In Chromium build we just proxy everything to the real fuzzer_test
-  template("dawn_fuzzer_test") {
-    fuzzer_test(target_name) {
-      forward_variables_from(invoker, "*")
-    }
-  }
-} else {
-  import("//testing/test.gni")
-
-  # In standalone build we do something similar to fuzzer_test.
-  template("dawn_fuzzer_test") {
-    test(target_name) {
-      forward_variables_from(invoker,
-                             [
-                               "asan_options",
-                               "cflags",
-                               "cflags_cc",
-                               "check_includes",
-                               "defines",
-                               "deps",
-                               "include_dirs",
-                               "sources",
-                             ])
-
-      if (defined(asan_options)) {
-        not_needed([ "asan_options" ])
-      }
-
-      if (!defined(configs)) {
-        configs = []
-      }
-
-      # Weirdly fuzzer_test uses a special variable for additional configs.
-      if (defined(invoker.additional_configs)) {
-        configs += invoker.additional_configs
-      }
-
-      sources += [ "StandaloneFuzzerMain.cpp" ]
-    }
-  }
-}
 
 static_library("dawn_wire_server_fuzzer_common") {
   sources = [
@@ -87,7 +34,7 @@ static_library("dawn_wire_server_fuzzer_common") {
   ]
 }
 
-dawn_fuzzer_test("dawn_wire_server_and_frontend_fuzzer") {
+fuzzer_test("dawn_wire_server_and_frontend_fuzzer") {
   sources = [ "DawnWireServerAndFrontendFuzzer.cpp" ]
 
   deps = [ ":dawn_wire_server_fuzzer_common" ]
@@ -96,7 +43,7 @@ dawn_fuzzer_test("dawn_wire_server_and_frontend_fuzzer") {
 }
 
 if (is_win) {
-  dawn_fuzzer_test("dawn_wire_server_and_d3d12_backend_fuzzer") {
+  fuzzer_test("dawn_wire_server_and_d3d12_backend_fuzzer") {
     sources = [ "DawnWireServerAndD3D12BackendFuzzer.cpp" ]
 
     deps = [ ":dawn_wire_server_fuzzer_common" ]
@@ -105,7 +52,7 @@ if (is_win) {
   }
 }
 
-dawn_fuzzer_test("dawn_wire_server_and_vulkan_backend_fuzzer") {
+fuzzer_test("dawn_wire_server_and_vulkan_backend_fuzzer") {
   sources = [ "DawnWireServerAndVulkanBackendFuzzer.cpp" ]
 
   deps = [ ":dawn_wire_server_fuzzer_common" ]
@@ -158,7 +105,7 @@ if (is_dawn_lpm_fuzzer && build_with_chromium && dawn_use_swiftshader &&
     ]
   }
 
-  dawn_fuzzer_test("dawn_lpm_fuzzer_vulkan_backend") {
+  fuzzer_test("dawn_lpm_fuzzer_vulkan_backend") {
     sources = get_target_outputs(":dawn_lpmfuzz_cpp")
     sources += get_target_outputs(":dawn_lpm_proto_gen")
 
