Using binding information for SPIR-V/Tint interface
This CL removes the explicit external texture and multiplanar options
from the SPIR-V writer and instead uses `binding` information which is
populated by Dawn.

On the Tint side the needed transform data is created from the requested
result from Dawn.

Bug: tint:1501
Change-Id: I36ce6272b3b4e8e4b47a0bcaf59bec193acb7038

--- a/src/tint/cmd/common/BUILD.bazel
+++ b/src/tint/cmd/common/BUILD.bazel
@@ -26,10 +26,12 @@ load("@bazel_skylib//lib:selects.bzl", "selects")
 cc_library(
   name = "common",
   srcs = [
+    "generate_bindings.cc",
     "generate_external_texture_bindings.cc",
     "helper.cc",
   ],
   hdrs = [
+    "generate_bindings.h",
     "generate_external_texture_bindings.h",
     "helper.h",
   ],
@@ -69,6 +71,11 @@ cc_library(
   }) + select({
     ":tint_build_spv_reader_or_tint_build_spv_writer": [
       "@spirv_tools",
+    ],
+    "//conditions:default": [],
+  }) + select({
+    ":tint_build_spv_writer": [
+      "//src/tint/lang/spirv/writer/common",
     ],
     "//conditions:default": [],
   }),
