--- a/src/tint/cmd/common/BUILD.gn
+++ b/src/tint/cmd/common/BUILD.gn
@@ -31,6 +31,8 @@ if (tint_build_unittests) {
 
 libtint_source_set("common") {
   sources = [
+    "generate_bindings.cc",
+    "generate_bindings.h",
     "generate_external_texture_bindings.cc",
     "generate_external_texture_bindings.h",
     "helper.cc",
@@ -75,6 +77,10 @@ libtint_source_set("common") {
       "${tint_spirv_tools_dir}:spvtools_headers",
       "${tint_spirv_tools_dir}:spvtools_val",
     ]
+  }
+
+  if (tint_build_spv_writer) {
+    deps += [ "${tint_src_dir}/lang/spirv/writer/common" ]
   }
 }
 if (tint_build_unittests) {
