--- a/src/tint/lang/spirv/writer/helpers/BUILD.bazel
+++ b/src/tint/lang/spirv/writer/helpers/BUILD.bazel
@@ -24,67 +24,22 @@
 load("//src/tint:flags.bzl", "COPTS")
 load("@bazel_skylib//lib:selects.bzl", "selects")
 cc_library(
-  name = "common",
+  name = "helpers",
   srcs = [
-    "binary_writer.cc",
-    "function.cc",
-    "instruction.cc",
-    "module.cc",
-    "operand.cc",
-    "option_builder.cc",
+    "generate_bindings.cc",
   ],
   hdrs = [
-    "binary_writer.h",
-    "function.h",
-    "instruction.h",
-    "module.h",
-    "operand.h",
-    "option_builder.h",
-    "options.h",
-  ],
-  deps = [
-    "//src/tint/api/common",
-    "//src/tint/api/options",
-    "//src/tint/utils/containers",
-    "//src/tint/utils/ice",
-    "//src/tint/utils/macros",
-    "//src/tint/utils/math",
-    "//src/tint/utils/memory",
-    "//src/tint/utils/reflection",
-    "//src/tint/utils/rtti",
-    "//src/tint/utils/text",
-    "//src/tint/utils/traits",
-  ] + select({
-    ":tint_build_spv_reader_or_tint_build_spv_writer": [
-      "@spirv_headers//:spirv_cpp11_headers", "@spirv_headers//:spirv_c_headers",
-    ],
-    "//conditions:default": [],
-  }),
-  copts = COPTS,
-  visibility = ["//visibility:public"],
-)
-cc_library(
-  name = "test",
-  alwayslink = True,
-  srcs = [
-    "binary_writer_test.cc",
-    "helper_test.h",
-    "instruction_test.cc",
-    "module_test.cc",
-    "operand_test.cc",
-    "spv_dump_test.cc",
-    "spv_dump_test.h",
+    "generate_bindings.h",
   ],
   deps = [
     "//src/tint/api/common",
     "//src/tint/lang/core",
     "//src/tint/lang/core/constant",
-    "//src/tint/lang/core/intrinsic",
-    "//src/tint/lang/core/ir",
     "//src/tint/lang/core/type",
-    "//src/tint/lang/spirv",
-    "//src/tint/lang/spirv/intrinsic",
-    "//src/tint/lang/spirv/ir",
+    "//src/tint/lang/wgsl",
+    "//src/tint/lang/wgsl/ast",
+    "//src/tint/lang/wgsl/program",
+    "//src/tint/lang/wgsl/sem",
     "//src/tint/utils/containers",
     "//src/tint/utils/diagnostic",
     "//src/tint/utils/ice",
@@ -98,18 +53,9 @@ cc_library(
     "//src/tint/utils/symbol",
     "//src/tint/utils/text",
     "//src/tint/utils/traits",
-    "@gtest",
   ] + select({
-    ":tint_build_spv_reader_or_tint_build_spv_writer": [
-      "@spirv_headers//:spirv_cpp11_headers", "@spirv_headers//:spirv_c_headers",
-      "@spirv_tools",
-    ],
-    "//conditions:default": [],
-  }) + select({
     ":tint_build_spv_writer": [
       "//src/tint/lang/spirv/writer/common",
-      "//src/tint/lang/spirv/writer/printer",
-      "//src/tint/lang/spirv/writer/raise",
     ],
     "//conditions:default": [],
   }),
@@ -118,20 +64,7 @@ cc_library(
 )
 
 alias(
-  name = "tint_build_spv_reader",
-  actual = "//src/tint:tint_build_spv_reader_true",
-)
-
-alias(
   name = "tint_build_spv_writer",
   actual = "//src/tint:tint_build_spv_writer_true",
-)
-
-selects.config_setting_group(
-    name = "tint_build_spv_reader_or_tint_build_spv_writer",
-    match_any = [
-        "tint_build_spv_reader",
-        "tint_build_spv_writer",
-    ],
 )
 
