--- a/src/tint/lang/spirv/writer/helpers/BUILD.gn
+++ b/src/tint/lang/spirv/writer/helpers/BUILD.gn
@@ -21,37 +21,24 @@
 #                       Do not modify this file directly
 ################################################################################
 
-import("../../../../scripts/tint_overrides_with_defaults.gni")
+import("../../../../../../scripts/tint_overrides_with_defaults.gni")
 
 import("${tint_src_dir}/tint.gni")
 
-executable("tint") {
-  output_name = "tint"
-  sources = [ "main.cc" ]
+libtint_source_set("helpers") {
+  sources = [
+    "generate_bindings.cc",
+    "generate_bindings.h",
+  ]
   deps = [
-    "${tint_src_dir}/api",
     "${tint_src_dir}/api/common",
-    "${tint_src_dir}/api/options",
-    "${tint_src_dir}/cmd/common",
     "${tint_src_dir}/lang/core",
     "${tint_src_dir}/lang/core/constant",
-    "${tint_src_dir}/lang/core/ir",
     "${tint_src_dir}/lang/core/type",
-    "${tint_src_dir}/lang/hlsl/writer/common",
-    "${tint_src_dir}/lang/spirv/reader/common",
-    "${tint_src_dir}/lang/spirv/writer/helpers",
     "${tint_src_dir}/lang/wgsl",
     "${tint_src_dir}/lang/wgsl/ast",
-    "${tint_src_dir}/lang/wgsl/ast/transform",
-    "${tint_src_dir}/lang/wgsl/helpers",
-    "${tint_src_dir}/lang/wgsl/inspector",
     "${tint_src_dir}/lang/wgsl/program",
-    "${tint_src_dir}/lang/wgsl/reader",
-    "${tint_src_dir}/lang/wgsl/reader/program_to_ir",
     "${tint_src_dir}/lang/wgsl/sem",
-    "${tint_src_dir}/lang/wgsl/writer",
-    "${tint_src_dir}/utils/cli",
-    "${tint_src_dir}/utils/command",
     "${tint_src_dir}/utils/containers",
     "${tint_src_dir}/utils/diagnostic",
     "${tint_src_dir}/utils/ice",
@@ -62,51 +49,12 @@ executable("tint") {
     "${tint_src_dir}/utils/reflection",
     "${tint_src_dir}/utils/result",
     "${tint_src_dir}/utils/rtti",
-    "${tint_src_dir}/utils/strconv",
     "${tint_src_dir}/utils/symbol",
     "${tint_src_dir}/utils/text",
     "${tint_src_dir}/utils/traits",
   ]
 
-  if (tint_build_glsl_writer) {
-    deps += [
-      "${tint_glslang_dir}:glslang_default_resource_limits_sources",
-      "${tint_glslang_dir}:glslang_lib_sources",
-      "${tint_src_dir}/lang/glsl/writer",
-      "${tint_src_dir}/lang/glsl/writer/common",
-    ]
-  }
-
-  if (tint_build_hlsl_writer) {
-    deps += [
-      "${tint_src_dir}/lang/hlsl/validate",
-      "${tint_src_dir}/lang/hlsl/writer",
-    ]
-  }
-
-  if (tint_build_msl_writer) {
-    deps += [
-      "${tint_src_dir}/lang/msl/validate",
-      "${tint_src_dir}/lang/msl/writer",
-      "${tint_src_dir}/lang/msl/writer/common",
-    ]
-  }
-
-  if (tint_build_spv_reader) {
-    deps += [ "${tint_src_dir}/lang/spirv/reader" ]
-  }
-
-  if (tint_build_spv_reader || tint_build_spv_writer) {
-    deps += [
-      "${tint_spirv_tools_dir}:spvtools_headers",
-      "${tint_spirv_tools_dir}:spvtools_val",
-    ]
-  }
-
   if (tint_build_spv_writer) {
-    deps += [
-      "${tint_src_dir}/lang/spirv/writer",
-      "${tint_src_dir}/lang/spirv/writer/common",
-    ]
+    deps += [ "${tint_src_dir}/lang/spirv/writer/common" ]
   }
 }
