[ir] Add PreservePadding transform
Use it in the SPIR-V writer, followed by DirectVariableAccess.

Bug: tint:1906
Change-Id: Ie7aa96a527f5798028867a5c1565a35762a7009e

--- a/src/tint/lang/core/ir/transform/BUILD.gn
+++ b/src/tint/lang/core/ir/transform/BUILD.gn
@@ -49,6 +49,8 @@ libtint_source_set("transform") {
     "direct_variable_access.h",
     "multiplanar_external_texture.cc",
     "multiplanar_external_texture.h",
+    "preserve_padding.cc",
+    "preserve_padding.h",
     "robustness.cc",
     "robustness.h",
     "shader_io.cc",
@@ -95,6 +97,7 @@ if (tint_build_unittests) {
       "direct_variable_access_test.cc",
       "helper_test.h",
       "multiplanar_external_texture_test.cc",
+      "preserve_padding_test.cc",
       "robustness_test.cc",
       "std140_test.cc",
       "zero_init_workgroup_memory_test.cc",
