[ir] Add polyfill for ftoi conversions
Use the select builtin to clamp out-of-range values to the domain of
the target integer type.

Use it in the SPIR-V writer.

Bug: tint:1906
Change-Id: I42b7b48d9e2f419bba6cdc39c4996e936626d790

--- a/src/tint/lang/core/ir/transform/BUILD.gn
+++ b/src/tint/lang/core/ir/transform/BUILD.gn
@@ -43,6 +43,8 @@ libtint_source_set("transform") {
     "block_decorated_structs.h",
     "builtin_polyfill.cc",
     "builtin_polyfill.h",
+    "conversion_polyfill.cc",
+    "conversion_polyfill.h",
     "demote_to_helper.cc",
     "demote_to_helper.h",
     "direct_variable_access.cc",
@@ -92,6 +94,7 @@ if (tint_build_unittests) {
       "binding_remapper_test.cc",
       "block_decorated_structs_test.cc",
       "builtin_polyfill_test.cc",
+      "conversion_polyfill_test.cc",
       "demote_to_helper_test.cc",
       "direct_variable_access_test.cc",
       "helper_test.h",
