--- a/src/tint/lang/spirv/writer/helpers/BUILD.bazel
+++ b/src/tint/lang/spirv/writer/helpers/BUILD.bazel
@@ -24,24 +24,18 @@
 load("//src/tint:flags.bzl", "COPTS")
 load("@bazel_skylib//lib:selects.bzl", "selects")
 cc_library(
-  name = "printer",
+  name = "helpers",
   srcs = [
-    "printer.cc",
+    "generate_bindings.cc",
   ],
   hdrs = [
-    "printer.h",
+    "generate_bindings.h",
   ],
   deps = [
     "//src/tint/api/common",
     "//src/tint/lang/core",
     "//src/tint/lang/core/constant",
-    "//src/tint/lang/core/intrinsic",
-    "//src/tint/lang/core/ir",
     "//src/tint/lang/core/type",
-    "//src/tint/lang/spirv",
-    "//src/tint/lang/spirv/intrinsic",
-    "//src/tint/lang/spirv/ir",
-    "//src/tint/lang/spirv/type",
     "//src/tint/lang/wgsl",
     "//src/tint/lang/wgsl/ast",
     "//src/tint/lang/wgsl/program",
@@ -60,15 +54,8 @@ cc_library(
     "//src/tint/utils/text",
     "//src/tint/utils/traits",
   ] + select({
-    ":tint_build_spv_reader_or_tint_build_spv_writer": [
-      "@spirv_headers//:spirv_cpp11_headers", "@spirv_headers//:spirv_c_headers",
-    ],
-    "//conditions:default": [],
-  }) + select({
     ":tint_build_spv_writer": [
-      "//src/tint/lang/spirv/writer/ast_printer",
       "//src/tint/lang/spirv/writer/common",
-      "//src/tint/lang/spirv/writer/raise",
     ],
     "//conditions:default": [],
   }),
@@ -77,20 +64,7 @@ cc_library(
 )
 
 alias(
-  name = "tint_build_spv_reader",
-  actual = "//src/tint:tint_build_spv_reader_true",
-)
-
-alias(
   name = "tint_build_spv_writer",
   actual = "//src/tint:tint_build_spv_writer_true",
-)
-
-selects.config_setting_group(
-    name = "tint_build_spv_reader_or_tint_build_spv_writer",
-    match_any = [
-        "tint_build_spv_reader",
-        "tint_build_spv_writer",
-    ],
 )
 
