--- a/src/dawn/fuzzers/BUILD.gn
+++ b/src/dawn/fuzzers/BUILD.gn
@@ -62,9 +62,6 @@ fuzzer_test("dawn_wire_server_and_vulkan_backend_fuzzer") {
 
 if (is_dawn_lpm_fuzzer && build_with_chromium && dawn_use_swiftshader &&
     !disable_libfuzzer && use_fuzzing_engine) {
-  import("//third_party/protobuf/proto_library.gni")
-  import("${dawn_root}/generator/dawn_generator.gni")
-
   dawn_json_lpm_generator("dawn_lpmfuzz_cpp") {
     target = "dawn_lpmfuzz_cpp"
     outputs = [
@@ -74,7 +71,6 @@ if (is_dawn_lpm_fuzzer && build_with_chromium && dawn_use_swiftshader &&
     ]
   }
 
-  # Generate the `.proto` files
   dawn_json_lpm_generator("dawn_lpmfuzz_proto") {
     target = "dawn_lpmfuzz_proto"
     outputs = [
@@ -83,13 +79,11 @@ if (is_dawn_lpm_fuzzer && build_with_chromium && dawn_use_swiftshader &&
     ]
   }
 
-  # Copy handwritten `.proto` files to build directory
   copy("copy_dawn_custom_lpm") {
     sources = [ "${dawn_root}/src/dawn/fuzzers/lpmfuzz/dawn_custom_lpm.proto" ]
     outputs = [ "$root_out_dir/gen/third_party/dawn/src/dawn/fuzzers/lpmfuzz/dawn_custom_lpm.proto" ]
   }
 
-  # Generate the `.pb.h` and `.pb.cc` files
   proto_library("dawn_lpm_proto") {
     proto_in_dir = "$root_out_dir/gen"
     proto_out_dir = "//"
@@ -105,11 +99,10 @@ if (is_dawn_lpm_fuzzer && build_with_chromium && dawn_use_swiftshader &&
     ]
   }
 
-  fuzzer_test("dawn_lpm_fuzzer_vulkan_backend") {
-    sources = get_target_outputs(":dawn_lpmfuzz_cpp")
-    sources += get_target_outputs(":dawn_lpm_proto_gen")
-
-    sources += [
+  dawn_lpm_template("dawn_lpm_fuzzer_vulkan_backend_with_tint") {
+    defines = [ "DAWNLPM_FUZZ_TINT=1" ]
+    dawn_lpm_sources = get_target_outputs(":dawn_lpmfuzz_cpp")
+    dawn_lpm_sources += [
       "lpmfuzz/DawnLPMFuzzer.cpp",
       "lpmfuzz/DawnLPMFuzzer.h",
       "lpmfuzz/DawnLPMFuzzerAndVulkanBackend.cpp",
@@ -118,17 +111,19 @@ if (is_dawn_lpm_fuzzer && build_with_chromium && dawn_use_swiftshader &&
       "lpmfuzz/DawnLPMSerializerCustom.cpp",
       "lpmfuzz/DawnLPMSerializerCustom.h",
     ]
+  }
 
-    deps = [
-      ":dawn_lpm_proto",
-      ":dawn_lpmfuzz_cpp",
-      "${dawn_root}/src/dawn:cpp",
-      "${dawn_root}/src/dawn:proc",
-      "${dawn_root}/src/dawn/common",
-      "${dawn_root}/src/dawn/native:static",
-      "${dawn_root}/src/dawn/utils",
-      "${dawn_root}/src/dawn/wire:static",
-      "//third_party/libprotobuf-mutator",
+  dawn_lpm_template("dawn_lpm_fuzzer_vulkan_backend") {
+    defines = [ "DAWNLPM_FUZZ_TINT=0" ]
+    dawn_lpm_sources = get_target_outputs(":dawn_lpmfuzz_cpp")
+    dawn_lpm_sources += [
+      "lpmfuzz/DawnLPMFuzzer.cpp",
+      "lpmfuzz/DawnLPMFuzzer.h",
+      "lpmfuzz/DawnLPMFuzzerAndVulkanBackend.cpp",
+      "lpmfuzz/DawnLPMObjectStore.cpp",
+      "lpmfuzz/DawnLPMObjectStore.h",
+      "lpmfuzz/DawnLPMSerializerCustom.cpp",
+      "lpmfuzz/DawnLPMSerializerCustom.h",
     ]
   }
 }
