[DawnLPM] Increase libfuzzer's max_len option
Change-Id: I319d2e3f1f5c3e23c06e882c4a97fe83c52094b7

--- a/src/dawn/fuzzers/BUILD.gn
+++ b/src/dawn/fuzzers/BUILD.gn
@@ -130,6 +130,11 @@ if (is_dawn_lpm_fuzzer && build_with_chromium && dawn_use_swiftshader &&
       "${dawn_root}/src/dawn/wire:static",
       "//third_party/libprotobuf-mutator",
     ]
+
+    libfuzzer_options = [
+      "max_len=2111000",
+      "len_control=0",
+    ]
   }
 }
 
