[tint][fuzzers] Add tint_wgsl_fuzzer executable
This is the framework for all future WGSL-input fuzzers.

Change-Id: I171a473724d842afc17a66726514a9736e57c00b

--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -217,7 +217,21 @@ source_set("winsock") {
 }
 
 ###############################################################################
-# Aliases.
+# Fuzzers
+###############################################################################
+action("tint_generate_wgsl_corpus") {
+  script = "${tint_src_dir}/cmd/fuzz/wgsl/generate_wgsl_corpus.py"
+  sources = [ "${tint_src_dir}/cmd/fuzz/wgsl/generate_wgsl_corpus.py" ]
+  args = [
+    "--stamp=" + rebase_path(fuzzer_corpus_wgsl_stamp, root_build_dir),
+    rebase_path("${tint_root_dir}/test", root_build_dir),
+    rebase_path(fuzzer_corpus_wgsl_dir, root_build_dir),
+  ]
+  outputs = [ fuzzer_corpus_wgsl_stamp ]
+}
+
+###############################################################################
+# Aliases
 ###############################################################################
 if (tint_build_unittests) {
   group("tint_unittests") {
