[spirv-writer] Combine access instruction chains
Some Qualcomm drivers lose matrix stride information for OpAccessChain
instructions that produce pointers to matrices. Use a transform to
combine chains of access instructions so that generated OpAccessChain
instructions always start from the root.

Bug: tint:1906
Change-Id: I371b11aa993da713144a6616dfa25943a986f9e5

--- a/src/tint/lang/core/ir/transform/BUILD.bazel
+++ b/src/tint/lang/core/ir/transform/BUILD.bazel
@@ -32,6 +32,7 @@ cc_library(
     "binding_remapper.cc",
     "block_decorated_structs.cc",
     "builtin_polyfill.cc",
+    "combine_access_instructions.cc",
     "conversion_polyfill.cc",
     "demote_to_helper.cc",
     "direct_variable_access.cc",
@@ -49,6 +50,7 @@ cc_library(
     "binding_remapper.h",
     "block_decorated_structs.h",
     "builtin_polyfill.h",
+    "combine_access_instructions.h",
     "conversion_polyfill.h",
     "demote_to_helper.h",
     "direct_variable_access.h",
@@ -94,6 +96,7 @@ cc_library(
     "binding_remapper_test.cc",
     "block_decorated_structs_test.cc",
     "builtin_polyfill_test.cc",
+    "combine_access_instructions_test.cc",
     "conversion_polyfill_test.cc",
     "demote_to_helper_test.cc",
     "direct_variable_access_test.cc",
