[tint] Don't link 'benchmark_main' target
Tint provides its own main().

Also add the benchmark target to the root BUILD.gn to have it built implicitly.

Change-Id: Iab254fde50f75e2ecd03c3b226883d2fb06c1585

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -34,6 +34,9 @@ group("all") {
   if (tint_build_unittests) {
     deps += [ "src/tint/cmd/test:test_cmd" ]
   }
+  if (tint_build_benchmarks) {
+    deps += [ "src/tint/cmd/bench:bench_cmd" ]
+  }
   if (dawn_standalone) {
     deps += [
       "src/dawn/samples",
