[spirv-writer] Add pass-matrix-by-pointer option
When this option is set, use a transform to pass all matrix values by
pointer instead of by value.

Enable this option in Dawn when targeting Qualcomm devices.

Fixed: tint:1949, tint:2045
Change-Id: I4c1d408f1683384ce8c687df5ae9c198881beb6e

--- a/src/tint/lang/spirv/writer/raise/BUILD.gn
+++ b/src/tint/lang/spirv/writer/raise/BUILD.gn
@@ -39,6 +39,8 @@ if (tint_build_spv_writer) {
       "handle_matrix_arithmetic.h",
       "merge_return.cc",
       "merge_return.h",
+      "pass_matrix_by_pointer.cc",
+      "pass_matrix_by_pointer.h",
       "raise.cc",
       "raise.h",
       "shader_io.cc",
@@ -91,6 +93,7 @@ if (tint_build_unittests) {
         "expand_implicit_splats_test.cc",
         "handle_matrix_arithmetic_test.cc",
         "merge_return_test.cc",
+        "pass_matrix_by_pointer_test.cc",
         "shader_io_test.cc",
         "var_for_dynamic_index_test.cc",
       ]
