[kokoro] Update GCC to 13
To work around compiler bugs.

Disable -Wmaybe-uninitialized across the codebase for GCC
as we're still seeing false-positives in GCC 13.

Change-Id: I648fcf209870fadcea9db648db1c3d1d65da9aa3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -502,6 +502,10 @@ if((CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang") OR
   set(COMPILER_IS_CLANG TRUE)
 endif()
 
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+  set(COMPILER_IS_GNU TRUE)
+endif()
+
 if((CMAKE_CXX_COMPILER_ID STREQUAL "GNU") OR COMPILER_IS_CLANG)
   set(COMPILER_IS_LIKE_GNU TRUE)
 endif()
