--- a/src/tint/cmd/fuzz/wgsl/BUILD.gn
+++ b/src/tint/cmd/fuzz/wgsl/BUILD.gn
@@ -70,6 +70,7 @@ tint_fuzzer_test("wgsl") {
     "${tint_src_dir}/lang/wgsl/ast",
     "${tint_src_dir}/lang/wgsl/ast/transform:fuzz",
     "${tint_src_dir}/lang/wgsl/program",
+    "${tint_src_dir}/lang/wgsl/program:fuzz",
     "${tint_src_dir}/lang/wgsl/sem",
     "${tint_src_dir}/utils/containers",
     "${tint_src_dir}/utils/diagnostic",
