[gn] Disable fuzzers when '[dawn|tint]_has_build' is false
Change-Id: Icd8521e0021ea59af9dcad83521fa608c3ee08b7

--- a/scripts/tint_overrides_with_defaults.gni
+++ b/scripts/tint_overrides_with_defaults.gni
@@ -16,6 +16,12 @@ import("//build_overrides/tint.gni")
 
 # This file contains Tint-related build flags.
 
+if (!defined(tint_has_build)) {
+  tint_has_build = true
+}
+
+tint_has_fuzzers = tint_has_build
+
 declare_args() {
   # Path to tint checkout
   if (!defined(tint_root_dir)) {
