--- a/src/tint/tint.gni
+++ b/src/tint/tint.gni
@@ -76,54 +76,61 @@ template("tint_unittests_source_set") {
 ###############################################################################
 # Fuzzers
 ###############################################################################
-import("//testing/libfuzzer/fuzzer_test.gni")
-fuzzer_corpus_wgsl_dir = "${root_gen_dir}/fuzzers/wgsl_corpus"
-fuzzer_corpus_wgsl_stamp = "${fuzzer_corpus_wgsl_dir}.stamp"
+if (tint_has_fuzzers) {
+  import("//testing/libfuzzer/fuzzer_test.gni")
+  fuzzer_corpus_wgsl_dir = "${root_gen_dir}/fuzzers/wgsl_corpus"
+  fuzzer_corpus_wgsl_stamp = "${fuzzer_corpus_wgsl_dir}.stamp"
 
-template("tint_fuzz_source_set") {
-  source_set(target_name) {
-    forward_variables_from(invoker, "*", [ "configs" ])
+  template("tint_fuzz_source_set") {
+    source_set(target_name) {
+      forward_variables_from(invoker, "*", [ "configs" ])
 
-    testonly = true
+      testonly = true
 
-    if (!defined(invoker.deps)) {
-      deps = []
+      if (!defined(invoker.deps)) {
+        deps = []
+      }
+
+      if (defined(invoker.configs)) {
+        configs += invoker.configs
+      }
+
+      configs += [ "${tint_src_dir}:tint_common_config" ]
+
+      if (build_with_chromium) {
+        configs -= [ "//build/config/compiler:chromium_code" ]
+        configs += [ "//build/config/compiler:no_chromium_code" ]
+      }
+
+      if (!defined(invoker.public_configs)) {
+        public_configs = []
+      }
+
+      public_configs += [ "${tint_src_dir}:tint_public_config" ]
     }
-
-    if (defined(invoker.configs)) {
-      configs += invoker.configs
-    }
-
-    configs += [ "${tint_src_dir}:tint_common_config" ]
-
-    if (build_with_chromium) {
-      configs -= [ "//build/config/compiler:chromium_code" ]
-      configs += [ "//build/config/compiler:no_chromium_code" ]
-    }
-
-    if (!defined(invoker.public_configs)) {
-      public_configs = []
-    }
-
-    public_configs += [ "${tint_src_dir}:tint_public_config" ]
   }
-}
 
-template("tint_fuzzer_test") {
-  fuzzer_test(target_name) {
-    forward_variables_from(invoker, "*")
-    exclude_main = false
+  template("tint_fuzzer_test") {
+    fuzzer_test(target_name) {
+      forward_variables_from(invoker, "*")
+      exclude_main = false
 
-    if (target_name == "wgsl") {
-      dict = "dictionary.txt"
-      libfuzzer_options = [
-        "only_ascii=1",  # TODO(bclayton): Remove this to fuzz unicode?
-        "max_len=10000",
-      ]
-      seed_corpus = fuzzer_corpus_wgsl_dir
-      seed_corpus_deps = [ "${tint_src_dir}:tint_generate_wgsl_corpus" ]
-    } else {
-      assert(false, "unsupported tint fuzzer target")
+      if (target_name == "wgsl") {
+        dict = "dictionary.txt"
+        libfuzzer_options = [
+          "only_ascii=1",  # TODO(bclayton): Remove this to fuzz unicode?
+          "max_len=10000",
+        ]
+        seed_corpus = fuzzer_corpus_wgsl_dir
+        seed_corpus_deps = [ "${tint_src_dir}:tint_generate_wgsl_corpus" ]
+      } else {
+        assert(false, "unsupported tint fuzzer target")
+      }
     }
+  }
+} else {
+  template("tint_fuzz_source_set") {
+  }
+  template("tint_fuzzer_test") {
   }
 }
