[WIP] Resolve types without recursion
Change-Id: Ibbfc2e00a72ccd46a0af19ec59c437d7c5845ce3

--- a/src/tint/lang/wgsl/resolver/BUILD.bazel
+++ b/src/tint/lang/wgsl/resolver/BUILD.bazel
@@ -27,6 +27,7 @@ cc_library(
   name = "resolver",
   srcs = [
     "dependency_graph.cc",
+    "incomplete_type.cc",
     "resolve.cc",
     "resolver.cc",
     "sem_helper.cc",
@@ -35,6 +36,7 @@ cc_library(
   ],
   hdrs = [
     "dependency_graph.h",
+    "incomplete_type.h",
     "resolve.h",
     "resolver.h",
     "sem_helper.h",
