--- a/src/tint/lang/spirv/ir/BUILD.gn
+++ b/src/tint/lang/spirv/ir/BUILD.gn
@@ -33,6 +33,8 @@ libtint_source_set("ir") {
   sources = [
     "builtin_call.cc",
     "builtin_call.h",
+    "literal_operand.cc",
+    "literal_operand.h",
   ]
   deps = [
     "${tint_src_dir}/api/common",
