--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -219,15 +219,17 @@ source_set("winsock") {
 ###############################################################################
 # Fuzzers
 ###############################################################################
-action("tint_generate_wgsl_corpus") {
-  script = "${tint_src_dir}/cmd/fuzz/wgsl/generate_wgsl_corpus.py"
-  sources = [ "${tint_src_dir}/cmd/fuzz/wgsl/generate_wgsl_corpus.py" ]
-  args = [
-    "--stamp=" + rebase_path(fuzzer_corpus_wgsl_stamp, root_build_dir),
-    rebase_path("${tint_root_dir}/test", root_build_dir),
-    rebase_path(fuzzer_corpus_wgsl_dir, root_build_dir),
-  ]
-  outputs = [ fuzzer_corpus_wgsl_stamp ]
+if (tint_has_fuzzers) {
+  action("tint_generate_wgsl_corpus") {
+    script = "${tint_src_dir}/cmd/fuzz/wgsl/generate_wgsl_corpus.py"
+    sources = [ "${tint_src_dir}/cmd/fuzz/wgsl/generate_wgsl_corpus.py" ]
+    args = [
+      "--stamp=" + rebase_path(fuzzer_corpus_wgsl_stamp, root_build_dir),
+      rebase_path("${tint_root_dir}/test", root_build_dir),
+      rebase_path(fuzzer_corpus_wgsl_dir, root_build_dir),
+    ]
+    outputs = [ fuzzer_corpus_wgsl_stamp ]
+  }
 }
 
 ###############################################################################
