Fix warning for CMake Policy CMP0148
The policy deprecates FindPythonInterp in favor of FindPython2/3 so
change to use FindPython3 directly.

Bug: None
Change-Id: Ida64b147ba52394b4dff035c1edf0725c303554a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -370,7 +370,7 @@ if (NOT ${TINT_LIB_FUZZING_ENGINE_LINK_OPTIONS} STREQUAL "")
 endif()
 
 message(STATUS "Using python3")
-find_package(PythonInterp 3 REQUIRED)
+find_package(Python3 REQUIRED)
 
 ################################################################################
 # common_compile_options - sets compiler and linker options common for dawn and
