Make the C++ api header-only
The goal is to make it much easier to use alternative C++ wrappers
(in different namespaces) that may wrap dawn::native or dawn::wire
directly.

Across Chrome, in  //gpu, Skia, and Dawn, this change has a zero-sized
net impact on Android binary size.

Bug: chromium:40195122
Change-Id: I873776464c5017b7a439acf03a8a6274cd91badf

--- a/src/dawn/CMakeLists.txt
+++ b/src/dawn/CMakeLists.txt
@@ -86,23 +86,8 @@ target_sources(dawncpp_headers PUBLIC
 target_link_libraries(dawncpp_headers INTERFACE dawn_headers)
 install_if_enabled(dawncpp_headers)
 
-###############################################################################
-# Dawn C++ wrapper
-###############################################################################
-
-DawnJSONGenerator(
-    TARGET "cpp"
-    PRINT_NAME "Dawn C++ wrapper"
-    RESULT_VARIABLE "DAWNCPP_GEN_SOURCES"
-)
-
-add_library(dawncpp)
-common_compile_options(dawncpp)
-target_sources(dawncpp PRIVATE ${DAWNCPP_GEN_SOURCES})
-target_link_libraries(dawncpp PUBLIC dawncpp_headers)
-install_if_enabled(dawncpp)
-
-add_library(webgpu_cpp ALIAS dawncpp)
+add_library(dawncpp ALIAS dawncpp_headers)
+add_library(webgpu_cpp ALIAS dawncpp_headers)
 
 ###############################################################################
 # libdawn_proc
