Add Kotlin support to the ART library project.
This did require incrementing AGP version, which in turn required incrementing the Gradle version.

Bug: 307286150

Change-Id: Iadb2ff3625e2c8b4ff645276e331fc5c5b513e01

--- a/tools/android/build.gradle
+++ b/tools/android/build.gradle
@@ -27,4 +27,5 @@
 
 plugins {
     id 'com.android.library' version '8.1.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
 }
