--- a/tools/android/webgpu/build.gradle
+++ b/tools/android/webgpu/build.gradle
@@ -28,6 +28,7 @@
 plugins {
     id 'com.android.library'
     id 'maven-publish'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
@@ -58,6 +59,16 @@ android {
             headers "src/main/cpp/gen/include"
         }
     }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_17
+    }
+}
+
+dependencies {
+    implementation 'androidx.core:core-ktx:1.12.0'
 }
 
 project.afterEvaluate {
