CMake: Use Python3_EXECUTABLE instead of PYTHON_EXECUTABLE
Bug: None
Change-Id: I75eec36961d6daa5f48a97691bd5a27cdb9adac6

--- a/generator/CMakeLists.txt
+++ b/generator/CMakeLists.txt
@@ -26,13 +26,13 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 find_package(Python3 REQUIRED)
-message(STATUS "Dawn: using python at ${PYTHON_EXECUTABLE}")
+message(STATUS "Dawn: using python at ${Python3_EXECUTABLE}")
 
 # Check for Jinja2
 if (NOT DAWN_JINJA2_DIR)
     message(STATUS "Dawn: Using system jinja2")
     execute_process(
-        COMMAND ${PYTHON_EXECUTABLE} -c "import jinja2"
+        COMMAND ${Python3_EXECUTABLE} -c "import jinja2"
         RESULT_VARIABLE RET
     )
     if (NOT RET EQUAL 0)
@@ -55,7 +55,7 @@ function(DawnGenerator)
 
     # Build the set of args common to all invocation of that generator.
     set(BASE_ARGS
-        ${PYTHON_EXECUTABLE}
+        ${Python3_EXECUTABLE}
         ${G_SCRIPT}
         --template-dir
         "${DAWN_TEMPLATE_DIR}"
@@ -83,9 +83,7 @@ function(DawnGenerator)
     endif()
 
     # Ask CMake to re-run if any of the dependencies changed as it might modify the build graph.
-    if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.12.0")
-        set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS ${DEPENDENCIES})
-    endif()
+    set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS ${DEPENDENCIES})
 
     # Call the generator to get the list of its outputs.
     execute_process(
