Refactor SharedTexture/BufferMemory Into SharedResourceMemory
Change-Id: I3be5204109c7e36c9bbe9ffdcd1bc6d3b2df84e0

--- a/src/dawn/native/CMakeLists.txt
+++ b/src/dawn/native/CMakeLists.txt
@@ -213,6 +213,8 @@ target_sources(dawn_native
     "SharedBufferMemory.h"
     "SharedFence.cpp"
     "SharedFence.h"
+    "SharedResourceMemory.cpp"
+    "SharedResourceMemory.h"
     "SharedTextureMemory.cpp"
     "SharedTextureMemory.h"
     "Subresource.cpp"
